Bug 84806 - Apply actions to full table without the need to select paragraph before/after (to prevent e.g. an empty table is left)
Summary: Apply actions to full table without the need to select paragraph before/after...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
: 40893 105333 (view as bug list)
Depends on:
Blocks: Writer-Tables Writer-UX
  Show dependency treegraph
 
Reported: 2014-10-08 16:10 UTC by Ibrahim
Modified: 2022-02-09 20:05 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample file (14.42 KB, application/vnd.oasis.opendocument.text)
2014-10-08 16:10 UTC, Ibrahim
Details
after step 3 (74.53 KB, image/png)
2014-10-08 16:38 UTC, Yousuf Philips (jay) (retired)
Details
entire row selected in word 2010 (4.10 KB, image/png)
2015-01-27 20:55 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ibrahim 2014-10-08 16:10:39 UTC
Created attachment 107561 [details]
sample file

Steps:
1.Open attached file
2.Select table
3.Move table in the empty space after the 2 lines of D's

Behavior: After the table is moved, an empty version of the table is left behind.
Comment 1 Joel Madero 2014-10-08 16:35:14 UTC
Ubuntu 14.04 x64
LibreOffice 4.3.2.2 release (changing version as our version field is oldest version confirmed on, not latest that it's been seen on)

New

Minor - won't prevent high quality work but can slow it down
Low - default for minor bugs - you can just delete the left over table and continue working.

Going to test it against older releases now
Comment 2 Yousuf Philips (jay) (retired) 2014-10-08 16:38:22 UTC
Created attachment 107570 [details]
after step 3
Comment 3 Yousuf Philips (jay) (retired) 2014-10-08 16:39:52 UTC
Confirmed on master.

Version: 4.4.0.0.alpha0+
Build ID: 0ada00bd9b4f10861d37b8802564a2ace7385aa2
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-01_06:15:34
Comment 4 Joel Madero 2014-10-08 16:45:54 UTC
Confirmed preBibisect - updating version. Almost definitely inherited from OOo

@Ibrahim - it would be great if you could look into the bug tracker to try to find a duplicate of this. Because it's been around so long, I suspect someone has already reported it.
Comment 5 Cor Nouws 2014-10-08 19:49:23 UTC
Fun great feature :)
Of course when a paragraph before&after the table are selected too, the behaviour is normal.
Comment 6 Yousuf Philips (jay) (retired) 2014-10-09 07:27:47 UTC
I tried searching for a duplicate, but couldnt find any. :D
Comment 7 manj_k 2014-10-09 09:34:08 UTC
See also: 
(1) Bug 40893 - Drag and drop complete TABLE (contents) leaves empty table behind
(2) AskLibO – How can I move tables in Writer?
http://ask.libreoffice.org/en/question/257/how-can-i-move-tables-in-writer/?answer=1761#post-id-1761
Comment 8 Cor Nouws 2014-10-09 14:51:44 UTC
*** Bug 40893 has been marked as a duplicate of this bug. ***
Comment 9 Cor Nouws 2014-10-09 14:52:56 UTC
(In reply to Cor Nouws from comment #8)
> *** Bug 40893 has been marked as a duplicate of this bug. ***

This bug entry here has IMO some more practical information
Comment 10 Yousuf Philips (jay) (retired) 2015-01-27 20:55:21 UTC
Created attachment 112839 [details]
entire row selected in word 2010

@manj_k: Thanks for finding the duplicates. My searchfoo must be bad. :D

(In reply to Cor Nouws from comment #5)
> Of course when a paragraph before&after the table are selected too, the
> behaviour is normal.

Well it also works if its a paragraph before or after. :D

Cutting and pasting the selected table (either by selecting the cells of the table, clicking the select table button in the table toolbar, or clicking when the cursor changes to a southeast pointing arrow when you move the mouse northwest of the left corner of the table) also leaves the table behind as well. So movement it with drag and drop with the mouse (bug 40893) and moving it with cut and paste both dont work correctly.

I noticed in MS Word and WPS/Kingsoft Writer than when you select an entire row or table, it also selects the empty space to the right of the row(s) to differentiate between selecting the row cells or the entire row. So when you cut when the entire row is selected, it removes that row and when you cut when the cells of the row are selected, it only cuts the cell contents.
Comment 11 Xisco Faulí 2016-09-14 15:47:47 UTC
[This is an automatic message]

Changing version to 3.5.7.2 in order to get rid of 'preBibisect' version as 3.5.7.2 looks to be the last version not covered by bibisect-43all.
Comment 12 Yousuf Philips (jay) (retired) 2017-02-04 13:20:27 UTC
*** Bug 105333 has been marked as a duplicate of this bug. ***
Comment 13 Cor Nouws 2017-02-06 19:16:55 UTC
(technical note: tables have their own context in a writer document)
Comment 14 Heiko Tietze 2018-04-20 15:09:44 UTC
Similar issue happens when a table has been inserted on top of the document and the user wants to delete it (requires to add a paragraph before, done per alt+enter). Also: see also.

Adjusting summary, removing needsUX, and the issue is a major annoyance (at least normal).
Comment 15 V Stuart Foote 2018-06-22 03:21:06 UTC
*** Bug 118311 has been marked as a duplicate of this bug. ***
Comment 16 Cor Nouws 2019-09-24 16:51:56 UTC
Mind! Bug 118311 fixes cutting of a fully selected table.
Comment 17 Commit Notification 2019-09-25 14:37:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7fe64353dc9950e19182a59a486a1ecac27cf98e

tdf#84806 Writer: drag and drop selected tables, don't empty

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 László Németh 2019-09-25 14:39:03 UTC
tdf#84806 Writer: drag and drop selected tables, don't empty

Drag and drop operation on a wholly selected table
resulted a copy of the original table, keeping also the
original one without its text content, ie. emptying it.

Now drag and drop works as intended: moving the table
instead of copying and emptying (like also MSO does).

See also commit 144bdd189d07faef0f71edbd039359665a45876c
"tdf#118311 Writer: cut selected table, not only its text content".

(tdf#118311 Writer: cut selected table, not only its text content

like MSO does. For example, if the text cursor in the table, press
Ctrl-A (Select All) twice (or if the cell is empty, once), and
Ctrl-X (Cut) to cut the table.

Note: This speeds up table moving and deletion significantly,
because there were only the following nonintuitive and uncomfortable
methods to cut and insert the table:

1) inserting an empty line before the table, and selecting that, too,
   Ctrl-X, Ctrl-V (Paste) and deleting the empty line after table
   insertion. Unfortunately, this doesn't work in the case of nested
   tables.

2) or selecting only the table, Ctrl-C (Copy), Table->Delete->Table
   and Ctrl-V.

Note: It's still possible to cut only the selected text content
using Copy and Delete.

See also https://bz.apache.org/ooo/show_bug.cgi?id=8931
"Deleting a table" from 2002 and https://bz.apache.org/ooo/show_bug.cgi?id=39405
"delete/cut also table, not only contents" from 2004.)