tdf#84806 Writer: drag and drop selected tables, don't empty

Drag and drop operation on a wholly selected table
resulted a copy of the original table, keeping also the
original one without its text content, ie. emptying it.

Now drag and drop works as intended: moving the table
instead of copying and emptying (like also MSO does).

See also commit 144bdd189d07faef0f71edbd039359665a45876c
"tdf#118311 Writer: cut selected table, not only its text content".

Change-Id: I7156420d35bd8de320c2559bc9453dbad846517d